--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,19 @@ description = "Legal navigator for Victorian renters"
 requires-python = ">=3.11"
 dependencies = []
 
+[tool.setuptools]
+packages = [
+    "agents",
+    "api",
+    "core",
+    "knowledge",
+    "llm",
+    "scheduler",
+    "rag_indexer",
+    "fastapi",
+    "pydantic",
+]
+
 [project.optional-dependencies]
 dev = [
     "pytest>=8.2,<9.0",
